--- a/main.html
+++ b/main.html
@@ -12,7 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="start">
+
+<div class="page">
     <div class="start_header">
         <p>Breakpoint 2023 - New City. New Vibes - Get Early Access -></p>
     </div>
@@ -56,9 +57,61 @@
             <img src="image/image%208.png" rel="#" alt="#">
         </div>
     </div>
-</div>
-<div class="content">
-
+    <div class="content">
+        <div class="content-box">
+            <div class="content-top">
+                <div class="text-left">
+                    <p>Join a community<br> of millions</p>
+                </div>
+                <div class="text-right">
+                    <p>11.5M+</p>
+                    <p>Active accounts</p>
+                    <p>21.9M</p>
+                    <p>NFTs minted</p>
+                    <p>$0.00025</p>
+                    <p>Average cost per transaction</p>
+                </div>
+            </div>
+            <div class="content-bottom">
+                <div class="textbox">
+                    <p>Made for<br> mass adoption</p>
+                    <p>Live data</p>
+                </div>
+                <div class="textbox">
+                    <div class="text-box">
+                        <p>Fast</p>
+                        <p>Don’t keep your users waiting. Solana has block times of 400 milliseconds — and as hardware
+                            gets faster, so will the network.</p>
+                        <p>3,969</p>
+                        <p>Transactions per second</p>
+                    </div>
+                    <div class="text-box">
+                        <p>Scalable</p>
+                        <p>Get big, quick. Solana is made to handle thousands of transactions per second, and fees for
+                            both developers and users remain less than $0.01.</p>
+                        <p>163,077,581,394</p>
+                        <p>Total transactions</p>
+                    </div>
+                </div>
+                <div class="textbox">
+                    <div class="text-box">
+                        <p>Decentralized</p>
+                        <p>The Solana network is validated by thousands of nodes that operate independently of each
+                            other, ensuring your data remains secure and censorship resistant.</p>
+                        <p>1,675</p>
+                        <p>Validator nodes</p>
+                    </div>
+                    <div class="text-box">
+                        <p>Energy Efficient</p>
+                        <p>Solana’s proof of stake network and other innovations minimize its impact on the <a class="linkbox" href="#">environment.</a>
+                            Each Solana transaction uses about the same energy as a few Google searches.</p>
+                        <p>0%</p>
+                        <p>Net carbon impact</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
