second commit -class content added

--- a/main.html
+++ b/main.html
@@ -103,11 +103,67 @@
                     </div>
                     <div class="text-box">
                         <p>Energy Efficient</p>
-                        <p>Solana’s proof of stake network and other innovations minimize its impact on the <a class="linkbox" href="#">environment.</a>
+                        <p>Solana’s proof of stake network and other innovations minimize its impact on the <a
+                                class="linkbox" href="#">environment.</a>
                             Each Solana transaction uses about the same energy as a few Google searches.</p>
                         <p>0%</p>
                         <p>Net carbon impact</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="any">
+        <div class="any-box">
+            <div class="any-head">
+                <div class="any-h">
+                    <p>Build for growth.</p>
+                </div>
+                <div class="any-nav">
+                    <div class="any-button">
+                        <p>NFTs</p>
+                    </div>
+                    <div class="any-button">
+                        <p>DeFi</p>
+                    </div>
+                    <div class="any-button">
+                        <p>Payments</p>
+                    </div>
+                    <div class="any-button">
+                        <p>Gaming</p>
+                    </div>
+                    <div class="any-button">
+                        <p>DAOs</p>
+                    </div>
+                </div>
+            </div>
+            <div class="any-images">
+                <div class="any-left"></div>
+                <div class="any-right">
+                    <div class="any-logo">
+                        <img src="image/image%209.png" alt="logo">
+                    </div>
+                    <div class="any-column">
+                        <p>It’s time to bridge the digital and physical. Anybodies helps established brands like
+                            Toys’R’Us connect real-life places and products with NFTs.</p>
+                    </div>
+                    <div class="any-links">
+                        <p>Learn more about NFTs on Solana</p>
+                    </div>
+                </div>
+            </div>
+            <div class="any-bottom">
+                <div class="any-bottom-img">
+                    <img src="image/IMAGE1%20(1).png" alt="logo">
+                </div>
+                <div class="any-bottom-img">
+                    <img src="image/image%2010.png" alt="logo">
+                </div>
+                <div class="any-bottom-img">
+                    <img src="image/image%2011.png" alt="logo">
+                </div>
+                <div class="any-bottom-img">
+                    <img src="image/IMAGE%20(17).png" alt="logo">
                 </div>
             </div>
         </div>
